--- a/app/views/race_players/show.html.haml
+++ b/app/views/race_players/show.html.haml
@@ -1,3 +1,4 @@
 %p#notice= notice
 
 =button_to 'normal', race_player_race_moves_path(race_player_id: @race_player), params: {race_move: {choice: 'normal'}}
+=button_to 'super', race_player_race_moves_path(race_player_id: @race_player), params: {race_move: {choice: 'super'}}
