--- a/app/views/race_games/show.html.haml
+++ b/app/views/race_games/show.html.haml
@@ -1,7 +1,11 @@
 %p#notice= notice
+
 %p
   %strong Distance:
   = @race_game.distance
+%p#tick
+  %strong Tick:
+  = @race_game.tick
 =button_to 'Choose-First', choose_first_race_game_path(@race_game)
 %ul
   - @race_game.race_players.each do |player|
@@ -9,3 +13,6 @@
       %span.index= player.index
       %span.steps= player.steps
       %span.scars= player.scars
+
+%div
+  =link_to 'new player', new_race_game_race_player_path(@race_game)
