--- a/app/views/race_games/show.html.haml
+++ b/app/views/race_games/show.html.haml
@@ -1,12 +1,10 @@
 %p#notice= notice
 
-%p
-  %strong Distance:
-  = @race_game.distance
-%p#tick
-  %strong Tick:
-  = @race_game.tick
-=button_to 'Choose-First', choose_first_race_game_path(@race_game)
+.top-bar
+  %p#tick
+    %strong Tick:
+    = @race_game.tick
+  =button_to 'Choose-First', choose_first_race_game_path(@race_game)
 %ul.cars
   - @race_game.race_players.each do |player|
     %li.car{id: "car#{player.index}"}
@@ -16,3 +14,5 @@
 
 %div
   =link_to 'new player', new_race_game_race_player_path(@race_game)
+:javascript
+  setTimeout("location.reload();",1000);
