--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -13,6 +13,16 @@ ul.cars
   .step#{$i}
     width: #{$i * 30}px
 
+.top-bar
+  width: 100%
+  background-color: black
+  color: white
+  height: 30px
+
+.top-bar-block
+  display: inline
+  margin-right: 15px
+
 .index
   color: red
   font-size: 80px
