--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -4,6 +4,12 @@
   text-align: right
   z-index: -100
 
+.ad
+  width: 100%
+  text-align: center
+  img
+    max-width: 100%
+
 ul.cars
   list-style-type: none
   overflow: auto
@@ -42,6 +48,9 @@ ul.cars
 .player-body
   display:block
   width: 100%
+  h1
+    text-align: center
+    margin-bottom: 50px
   .message
     display: block
     width: 100%
