--- a/app/views/race_games/join_last.html.haml
+++ b/app/views/race_games/join_last.html.haml
@@ -1,1 +1,6 @@
-=button_to 'Join', race_game_race_players_path(@race_game)
+.player-body
+  %h1
+    Welcome To the Race Game
+  =button_to 'Join', race_game_race_players_path(@race_game)
+  .ad
+    =image_tag('sg.png')
