--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -58,6 +58,9 @@ ul.cars
     display: block
     width: 100%
     height: 50px
+  .distance
+    text-align: center
+    width: 100%
   .car
     text-align: center
   .button_to
