--- a/app/views/race_players/show.html.haml
+++ b/app/views/race_players/show.html.haml
@@ -11,6 +11,10 @@
         .face-inner{class: "dice-face#{@race_player.dice_face}"}
           .dice-number
             =@race_player.dice_face
+  .distance
+    %strong Current Distance:
+    = @race_player.steps
 
+  %h1 Your Choice For Next Move
   =button_to 'normal', race_player_race_moves_path(race_player_id: @race_player), params: {race_move: {choice: 'normal'}}, class: "normal"
   =button_to 'super', race_player_race_moves_path(race_player_id: @race_player), params: {race_move: {choice: 'super'}}, class: "super"
