fade away message

--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -56,8 +56,11 @@ ul.cars
     margin-bottom: 50px
   .message
     display: block
+    text-align: center
     width: 100%
     height: 50px
+    font-size: 30px
+    margin-top: 10px
   .distance
     text-align: center
     width: 100%
