--- a/app/views/race_players/show.html.haml
+++ b/app/views/race_players/show.html.haml
@@ -18,3 +18,7 @@
   %h1 Your Choice For Next Move
   =button_to 'normal', race_player_race_moves_path(race_player_id: @race_player), params: {race_move: {choice: 'normal'}}, class: "normal"
   =button_to 'super', race_player_race_moves_path(race_player_id: @race_player), params: {race_move: {choice: 'super'}}, class: "super"
+
+:javascript
+  $('#notice').fadeIn().delay(2000).fadeOut();
+  $('#alert').fadeIn().delay(2000).fadeOut();
