--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -80,6 +80,7 @@ ul.cars
     background-color: red
   .dice
     display: block
+    position: relative
     width: 100%
     .dice-face
       width: 150px
@@ -88,6 +89,9 @@ ul.cars
       border: solid 1px black
       border-radius: 25px
       background-color: green
+    #face-gif
+      position: absolute
+      top: 0
 
 @for $i from 1 through 6
   .dice-face#{$i}::after
