move the qr code position

--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -2,7 +2,9 @@
   float: right
 .qr-code
   position: absolute
-  width: 100%
+  margin-top: 50px
+  margin-right: 50px
+  width: 95%
   text-align: right
   z-index: -100
 
