--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -1,8 +1,12 @@
-.pull-right
-  float: right
+.controls
+  text-align: right
+  position: absolute
+  top: 0
+  width: 100%
+
 .qr-code
   position: absolute
-  margin-top: 50px
+  top: 50px
   margin-right: 50px
   width: 95%
   text-align: right
@@ -45,7 +49,12 @@ ul.cars
 
 .index
   color: red
-  font-size: 80px
+  font-size: 30px
+  font-weight: bold
+  padding: 5px
+  background-color: yellow
+  border-radius: 50px
+  border: solid 4px black
 
 .dice-number
   display: none
