--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -48,10 +48,11 @@ ul.cars
   margin-right: 15px
 
 .index
+  position: absolute
   color: red
-  font-size: 30px
+  font-size: 40px
   font-weight: bold
-  padding: 5px
+  padding: 20px 10px
   background-color: yellow
   border-radius: 50px
   border: solid 4px black
@@ -74,7 +75,10 @@ ul.cars
     margin-top: 10px
   .distance
     text-align: center
+    font-size: 25px
+    color: #555
     width: 100%
+    margin-top: 20px
   .car
     text-align: center
   .button_to
@@ -85,9 +89,10 @@ ul.cars
     margin: 5px
     font-size: 50px
     color: white
-    padding: 15px
+    padding: 25px 15px
     border-radius: 16px
   input[type='submit'][value='super']
+    margin-top: 30px
     background-color: red
   .dice
     display: block
