--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -70,9 +70,11 @@ ul.cars
     display: block
     text-align: center
     width: 100%
-    height: 50px
-    font-size: 30px
-    margin-top: 10px
+    height: 100px
+    font-size: 80px
+    margin-top: 100px
+    #alert, #notice
+      font-size: 80px
   .distance
     text-align: center
     font-size: 25px
@@ -84,16 +86,16 @@ ul.cars
   .button_to
     text-align: center
   input[type='submit']
-    background-color: blue
+    background-color: #8BA870
     width: 60%
     margin: 5px
-    font-size: 50px
+    font-size: 80px
     color: white
-    padding: 25px 15px
+    padding: 85px 15px
     border-radius: 16px
   input[type='submit'][value='super']
     margin-top: 30px
-    background-color: red
+    background-color: #33A1C9
   .dice
     display: block
     position: relative
