--- a/app/views/race_players/new.html.haml
+++ b/app/views/race_players/new.html.haml
@@ -1,6 +1,5 @@
 .player-body
-  %h1
-    Welcome To the Race Game
-  =button_to 'Join', race_game_race_players_path(@race_game)
+  %h1= t('welcome')
+  =button_to RacePlayer.human_attribute_name(:join), race_game_race_players_path(@race_game)
   .ad
     =image_tag('sg.png')
