--- a/app/assets/stylesheets/race_games.sass
+++ b/app/assets/stylesheets/race_games.sass
@@ -13,8 +13,8 @@
   z-index: -100
 
 .ad
-  width: 100%
-  margin-top: 30px
+  width: 50%
+  margin: 30px auto
   text-align: center
   img
     max-width: 100%
@@ -65,7 +65,8 @@ ul.cars
   width: 100%
   h1
     text-align: center
-    margin-bottom: 50px
+    margin-bottom: 20px
+    margin-top: 50px
   .message
     display: block
     text-align: center
@@ -93,7 +94,7 @@ ul.cars
     color: white
     padding: 85px 15px
     border-radius: 16px
-  input[type='submit'][value='super']
+  input[type='submit'].super
     margin-top: 30px
     background-color: #33A1C9
   .dice
