fixed button_to path

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -4,4 +4,4 @@
 = link_to 'Back', players_path
 
 = button_to 'Normal', @player, :method => :put
-= button_to 'Super', :method => :put
+= button_to 'Super', @player, :method => :put
