add player show scenario

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -1,7 +1,4 @@
-
-= link_to 'Edit', edit_player_path(@player)
-\|
-= link_to 'Back', players_path
+Dice: 1
 
 = button_to 'Normal', @player, :method => :put
 = button_to 'Super', @player, :method => :put
