--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -1,8 +1,8 @@
 - if @thrown
   %p Dice: 1
-  %p Step: 0
+  %p Step: #{@step}
   %p Last Choice: Normal
   %p Distance: 0
 
-= button_to 'Normal', '/players/1/select_dice', :method => :put
-= button_to 'Super', '/players/1/select_dice', :method => :put
+= button_to 'Normal', "/players/#{@player.id}/select_dice", :method => :put
+= button_to 'Super', "/players/#{@player.id}/select_dice", :method => :put
