--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -1,6 +1,9 @@
 - if @thrown
   %p Dice: 1
-  %p Step: 0
+  %p
+    Step:
+    %span.steps
+      = @player.steps
   %p Last Choice: Normal
   %p Distance: 0
 
