add current_dice_number to player

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -2,7 +2,7 @@
   %p
     Dice:
     %span.dice
-      = @current_dice_number
+      = @player.current_dice_number
   %p
     Step:
     %span.steps
