--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -12,5 +12,6 @@
   %p
     Damage: #{@player.damage}
 
-= button_to 'Normal', select_dice_player_path(@player, choice: 'normal'), :method => :put
-= button_to 'Super', select_dice_player_path(@player, choice: 'super'), :method => :put
+%div.buttons
+  = button_to 'Normal', select_dice_player_path(@player, choice: 'normal'), :method => :put
+  = button_to 'Super', select_dice_player_path(@player, choice: 'super'), :method => :put
