change damage cal in super

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -8,7 +8,10 @@
     %span.steps
       = @player.steps
   %p Last Choice: Normal
-  %p Distance: 0
+  %p 
+    Distance:
+    %span.distance
+      = @player.distance
   %p
     Damage:
     %span.damage
