show number of moved in bigscreen

--- a/app/views/games/big_screen.html.haml
+++ b/app/views/games/big_screen.html.haml
@@ -1,6 +1,9 @@
 %h1 Big screen
 
-total 200
-moved 0
+%p
+  total 200
+  moved:
+  %span.moved
+    = @moved
 
 = button_to 'Next', '/big_screen', :method => :get
