shown choice in user view

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -8,7 +8,10 @@
       Step:
       %span.steps
         = @player.steps
-    %p Last Choice: Normal
+    %p
+      Last Choice:
+      %span.choice
+        = @player.choice
     %p 
       Distance:
       %span.distance
