--- a/app/views/games/big_screen.html.haml
+++ b/app/views/games/big_screen.html.haml
@@ -4,6 +4,6 @@
   total 200
   moved:
   %span.moved
-    = @moved
+    = @game.moved_player_count
 
 = button_to 'Next', '/big_screen', :method => :get
