added all cars in big screen

--- a/app/views/games/big_screen.html.haml
+++ b/app/views/games/big_screen.html.haml
@@ -7,3 +7,7 @@
     = @game.moved_player_count
 
 = button_to 'Next', '/big_screen', :method => :get
+
+- Player.count.times do |i|
+  %p{ class: "player_#{i}" }
+    ■
