add decorator to game view

--- a/app/views/games/big_screen.html.haml
+++ b/app/views/games/big_screen.html.haml
@@ -11,7 +11,7 @@
 
 = button_to 'Next', '/next', :method => :post
 
-- Player.all.each do |player|
+- @players.each do |player|
   %p
-    = car_image(player)
+    = player.car_image
 
