--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -22,5 +22,5 @@
         = @player.damage
 
 %div.buttons
-  = button_to 'Normal', select_dice_player_path(@player, choice: 'normal'), :method => :put
-  = button_to 'Super', select_dice_player_path(@player, choice: 'super'), :method => :put
+  = button_to 'Normal', select_dice_player_path(@player.id, choice: 'normal'), :method => :put
+  = button_to 'Super', select_dice_player_path(@player.id, choice: 'super'), :method => :put
