show please wait when thrown twice

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -24,3 +24,7 @@
 %div.buttons
   = button_to 'Normal', select_dice_player_path(@player, choice: 'normal'), :method => :put
   = button_to 'Super', select_dice_player_path(@player, choice: 'super'), :method => :put
+
+
+%div.message
+  = @message
